--- a/asta4d-doc/pom.xml
+++ b/asta4d-doc/pom.xml
@@ -19,7 +19,7 @@
       <repository>
       <id>mvn-public</id>
       <name>MVNRepository</name>
-      <url>http://mvnrepository.com</url>
+      <url>https://mvnrepository.com</url>
     </repository>
   </repositories>
   <properties>
